src/styles/components/_qm-calendar.scss
.qm-calendar {

  padding-right: 0.5rem;
  padding-left: 0.5rem;
  padding-bottom: 1.5rem;

  &-navs {
    background-color: $white;
    display: flex;
    color: $secondary-label-color;
    height: rem(50px);
    justify-content: space-between;
    text-transform: uppercase;
    align-items: center;
    font-size: 21px;
    font-weight: $font-weight-medium;
    padding: 1.8em 0.5rem;

    button {
      width: rem(50px);
      color: $secondary-label-color;
      background-color: transparent;
      border: none;
      font-size: 2.2rem;
      cursor: pointer;
      &:hover {
        color: rgba(0,0,0,0.62);
      }
    }
    @at-root [dir="rtl"] & {
      flex-direction: row-reverse;
    }
  }
  &-day-names {
    display: flex;
    justify-content: space-around;

    @at-root [dir="rtl"] & {
      flex-direction: row-reverse;
    }
  }
  .qm-day-name {
    flex: 1;
    font-weight: $font-weight-medium;
    color: $dark-transparent62;
    font-size: 16px;
    letter-spacing: $extended-letter-spacing;
    display: flex;
    justify-content: center;
    height: 3rem;
    align-items: center;
  }
  .qm-calendar-week {
    display: flex;
    justify-content: space-around;
    &:nth-child(5) {
      .qm-date-text:not(:empty) { 
        border-bottom: 1px solid rgba(0,0,0,0.12);
        &:last-child {
          border-right: 1px solid rgba(0,0,0,0.12);
        }
      }
      .qm-date-text:empty { 
        border-right: none;
        border-top: 1px solid rgba(0,0,0,0.12);
      }
    }

    @at-root [dir="rtl"] & {
        flex-direction: row-reverse; 
       }
  }
  .qm-week-date {
    display: flex;
    flex: 1;
    cursor: pointer;
    color: black;
    height: 56px;
    width: 56px;
    text-align: center;
    vertical-align: middle;
    line-height: 56px;



    &:last-child {
      .qm-date-text { 
        border-right: 1px solid $dark-transparent12;
      }

      .qm-date-text:empty { 
        border-right: none;
      }
    }

    &.today {
      background-color: $white;
      border: 1px solid $secondary-color;
    }
    &.selected {
      background-color: $secondary-color;
      color: $primary-text-color;
      font-weight: 500;
    }
    &.disabled {
      color: $light-gray9;
    }
  }
  .qm-date-text {
    width: 100%;
    border: 1px solid rgba(0,0,0,0.12);
    border-bottom: none;
    border-right: none;
    font-size: 18px;

    &:empty {
      border: none;
    }

    &:hover:not(:empty) {
      border: 1px solid $dark-transparent12;
      background-color: rgba(0,0,0,0.04);
      box-shadow: 0 4px 4px 0 rgba(0,0,0,0.04);
    }

  }
  background-color: $calendar-background;
}

.qm-month-nav {
  display: flex;
  justify-content: space-between;
}

